--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scroll": "^1.8.7"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "18.7.16",
     "@types/react": "18.0.19",
